--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,9 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+
+# =========================
+# Other Files to Ignore
+# =========================
+
+*.pyc
